# setlist-sync

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/setlist_sync/: __init__.py  __main__.py  cli.py  config.py  duplicate_prompt.py  init.py  library_scanner.py  matcher.py  output.py  spotify_client.py  status.py  update_check.py
src/setlist_sync/djay/: __init__.py  library.py  playlist.py
src/setlist_sync/rekordbox/: __init__.py  library.py  playlist.py
tests/: test_duplicate_prompt.py  test_matcher.py
