[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "setlist-sync"
version = "0.1.1"
description = "Match streaming playlists to your DJ library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Mathias Spiessens"},
]
keywords = ["dj", "music", "spotify", "playlist", "djay", "rekordbox", "setlist", "matching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "rapidfuzz>=3.0",
    "spotifyscraper>=2.0",
    "python-dotenv>=1.0",
    "mutagen>=1.47",
    "pyrekordbox>=0.4",
]

[project.urls]
Homepage = "https://github.com/mathiassp/setlist-sync"
Repository = "https://github.com/mathiassp/setlist-sync"
"Bug Tracker" = "https://github.com/mathiassp/setlist-sync/issues"

[project.scripts]
setlist-sync = "setlist_sync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
